public class AniamtionsStrings 
{
    internal static readonly string IsAttackTrigger = "isAttack";
    internal static readonly string IsJumpingTrigger = "isJumping";
    internal static readonly string IsOnCelling = "isOnCelling";
    internal static readonly string IsOnWall = "isOnWall";
    internal static readonly string IsGrounded = "isGrounded";
    internal static readonly string IsRunning = "isRunning";
    internal static readonly string IsMoving = "isMoving";
    internal static readonly string IsAlive = "isAlive";
    internal static readonly string IsHit = "isHit";
    internal static readonly string HitTrigger = "hit";
    internal static readonly string yVelocity = "yVelocity";
    internal static readonly string LockVelocity = "lockVelocity";
    internal static readonly string canMove = "canMove";
    internal static readonly string hasTarget = "hasTarget";
}
